# power-panel

./: .gitignore  Cargo.toml  README.md  default.nix  devbox.json  flake.nix  justfile  shell.nix
.github/workflows/: ci.yml
src/: css.rs  icons.rs  lib.rs  main.rs  style.css
