[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "A small GTK power menu for NixOS and Hyprland sessions"
edition = "2021"
homepage = "https://github.com/iancleary/power-panel"
license = "MIT"
name = "power-panel"
repository = "https://github.com/iancleary/power-panel"
version = "0.1.0"

[dependencies]
gtk = {version = "0.7.2", package = "gtk4", features = ["v4_10"]}
